@@ -40,7 +40,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-Pod-Example
-  homepage: https://github.com/tupinek/App-Pod-Example
+  homepage: https://github.com/michal-josef-spacek/App-Pod-Example
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/App-Pod-Example
+  repository: git://github.com/michal-josef-spacek/App-Pod-Example
 version: '0.17'
