@@ -30,8 +30,8 @@ requires 'Pod::Example' => 0.03;
 requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=App-Pod-Example';
-resources 'homepage' => 'https://github.com/tupinek/App-Pod-Example';
-resources 'repository' => 'git://github.com/tupinek/App-Pod-Example';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/App-Pod-Example';
+resources 'repository' => 'git://github.com/michal-josef-spacek/App-Pod-Example';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
 test_requires 'IO::CaptureOutput' => 0;
