@@ -88,7 +88,7 @@ pod-example - Script to print or run of example from documentation.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/App-Pod-Example>
+L<https://github.com/michal-josef-spacek/App-Pod-Example>
 
 =head1 AUTHOR
 
